testdata/step_20/valid/2d_sizeof.c
int main() {
    int a[3][3];
    return sizeof(a);
}
