testdata/step_20/parse_err/variable_length.c
int main() {
    int size = 3;
    int a[size];
    return sizeof(a);
}
